# run-odoo

./: .replit  README.md  pyproject.toml  pytest.ini  run_tests.py
src/run_odoo/: __init__.py  __main__.py  cli.py  config.py  runner.py  utils.py
src/run_odoo/odoo/: setup_script.sh
tests/: README.md  conftest.py  test_cli.py  test_config.py  test_runner.py  test_utils.py
tests/data/: comprehensive_config.toml  good_config.run_odoo.toml  invalid_config.toml
