[project]
name = "run-odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "trisdoan", email = "doanminhtri8183@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "distro>=1.9.0",
    "platformdirs>=3.10,<5.0",
    "tomlkit>=0.12.5,<0.14.0",
    "typer>=0.15.1",
    "harlequin[postgres]>=1.0.0",
]

[project.scripts]
run-odoo = "run_odoo.cli:app"

[project.optional-dependencies]
test = ["pytest"]
dev = ["harlequin[postgres]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

